pilot/pkg/config/kube/gateway/testdata/http.yaml.golden
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  annotations:
    internal.istio.io/gateway-semantics: gateway
    internal.istio.io/gateway-service: istio-ingressgateway.istio-system.svc.domain.suffix
    internal.istio.io/parents: Gateway/gateway/default.istio-system
    internal.istio.io/service-account-name: ""
  creationTimestamp: null
  name: gateway-istio-autogenerated-k8s-gateway-default
  namespace: istio-system
spec:
  servers:
  - hosts:
    - '*/*.domain.example'
    port:
      name: default
      number: 80
      protocol: HTTP
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  annotations:
    internal.istio.io/parents: HTTPRoute/mirror.default,HTTPRoute/redirect.default,HTTPRoute/rewrite.default
    internal.istio.io/route-semantics: gateway
  creationTimestamp: null
  name: istio-system~gateway-istio-autogenerated-k8s-gateway-default~*
  namespace: default
spec:
  gateways:
  - istio-system/gateway-istio-autogenerated-k8s-gateway-default
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /prefix-to-be-removed
    name: default.rewrite.1
    rewrite:
      uri: /
    route:
    - destination:
        host: httpbin.default.svc.domain.suffix
        port:
          number: 80
  - match:
    - uri:
        prefix: /prefix-original
    name: route1
    rewrite:
      authority: new.example.com
      uri: /replacement
    route:
    - destination:
        host: httpbin.default.svc.domain.suffix
        port:
          number: 80
  - match:
    - uri:
        prefix: /full-original
    name: default.rewrite.2
    rewrite:
      authority: new.example.com
      uriRegexRewrite:
        match: /.*
        rewrite: /replacement
    route:
    - destination:
        host: httpbin.default.svc.domain.suffix
        port:
          number: 80
  - mirrors:
    - destination:
        host: httpbin-mirror.default.svc.domain.suffix
        port:
          number: 80
      percentage:
        value: 50
    - destination:
        host: httpbin-second.default.svc.domain.suffix
        port:
          number: 80
      percentage:
        value: 80
    name: default.mirror.0
    route:
    - destination:
        host: httpbin.default.svc.domain.suffix
        port:
          number: 80
  - name: default.redirect.0
    redirect:
      port: 8080
      redirectCode: 302
      scheme: https
      uri: /replace-full
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  annotations:
    internal.istio.io/parents: HTTPRoute/http.default
    internal.istio.io/route-semantics: gateway
  creationTimestamp: null
  name: istio-system~gateway-istio-autogenerated-k8s-gateway-default~another.domain.example
  namespace: default
spec:
  gateways:
  - istio-system/gateway-istio-autogenerated-k8s-gateway-default
  hosts:
  - another.domain.example
  http:
  - headers:
      request:
        add:
          my-added-header: added-value
        remove:
        - my-removed-header
      response:
        add:
          my-added-resp-header: added-resp-value
        remove:
        - my-removed-header
    match:
    - headers:
        my-header:
          exact: some-value
      uri:
        prefix: /get
    name: default.http.0
    route:
    - destination:
        host: httpbin.default.svc.domain.suffix
        port:
          number: 80
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  annotations:
    internal.istio.io/parents: HTTPRoute/http-route-cors.default
    internal.istio.io/route-semantics: gateway
  creationTimestamp: null
  name: istio-system~gateway-istio-autogenerated-k8s-gateway-default~cors.domain.example
  namespace: default
spec:
  gateways:
  - istio-system/gateway-istio-autogenerated-k8s-gateway-default
  hosts:
  - cors.domain.example
  http:
  - corsPolicy:
      allowCredentials: true
      allowHeaders:
      - Accept
      - Accept-Language
      - Content-Language
      - Content-Type
      - Range
      allowMethods:
      - GET
      - HEAD
      - POST
      allowOrigins:
      - exact: https://example.com
    name: default.http-route-cors.0
    route:
    - destination:
        host: httpbin.default.svc.domain.suffix
        port:
          number: 80
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  annotations:
    internal.istio.io/parents: HTTPRoute/http.default
    internal.istio.io/route-semantics: gateway
  creationTimestamp: null
  name: istio-system~gateway-istio-autogenerated-k8s-gateway-default~first.domain.example
  namespace: default
spec:
  gateways:
  - istio-system/gateway-istio-autogenerated-k8s-gateway-default
  hosts:
  - first.domain.example
  http:
  - headers:
      request:
        add:
          my-added-header: added-value
        remove:
        - my-removed-header
      response:
        add:
          my-added-resp-header: added-resp-value
        remove:
        - my-removed-header
    match:
    - headers:
        my-header:
          exact: some-value
      uri:
        prefix: /get
    name: default.http.0
    route:
    - destination:
        host: httpbin.default.svc.domain.suffix
        port:
          number: 80
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  annotations:
    internal.istio.io/parents: HTTPRoute/multiple-inferencepool-backend-refs.default
    internal.istio.io/route-semantics: gateway
  creationTimestamp: null
  name: istio-system~gateway-istio-autogenerated-k8s-gateway-default~infpool-multi.domain.example
  namespace: default
spec:
  gateways:
  - istio-system/gateway-istio-autogenerated-k8s-gateway-default
  hosts:
  - infpool-multi.domain.example
  http:
  - match:
    - headers:
        my-header:
          exact: some-value
      uri:
        prefix: /infpool
    name: default.multiple-inferencepool-backend-refs.0
    route:
    - destination:
        host: infpool-gen-ip-6580eb2c.default.svc.domain.suffix
  - match:
    - headers:
        my-header:
          exact: some-value-2
      uri:
        prefix: /infpool
    name: default.multiple-inferencepool-backend-refs.1
    route:
    - destination:
        host: infpool-gen2-ip-97b729d1.default.svc.domain.suffix
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  annotations:
    internal.istio.io/parents: HTTPRoute/multi-route-infpool-1.default,HTTPRoute/multi-route-infpool-2.default
    internal.istio.io/route-semantics: gateway
  creationTimestamp: null
  name: istio-system~gateway-istio-autogenerated-k8s-gateway-default~multi-infpool.domain.example
  namespace: default
spec:
  gateways:
  - istio-system/gateway-istio-autogenerated-k8s-gateway-default
  hosts:
  - multi-infpool.domain.example
  http:
  - match:
    - uri:
        prefix: /model1
    name: default.multi-route-infpool-1.0
    route:
    - destination:
        host: infpool-model1-ip-aaaaf2d6.default.svc.domain.suffix
  - match:
    - uri:
        prefix: /model2
    name: default.multi-route-infpool-2.0
    route:
    - destination:
        host: infpool-model2-ip-f857bff9.default.svc.domain.suffix
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  annotations:
    internal.istio.io/parents: HTTPRoute/redirect-prefix-replace.default
    internal.istio.io/route-semantics: gateway
  creationTimestamp: null
  name: istio-system~gateway-istio-autogenerated-k8s-gateway-default~redirect.domain.example
  namespace: default
spec:
  gateways:
  - istio-system/gateway-istio-autogenerated-k8s-gateway-default
  hosts:
  - redirect.domain.example
  http:
  - match:
    - uri:
        prefix: /original
    name: default.redirect-prefix-replace.0
    redirect:
      port: 8080
      redirectCode: 302
      scheme: https
      uri: '%PREFIX()%/replacement'
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  annotations:
    internal.istio.io/parents: HTTPRoute/http-retry-request.default
    internal.istio.io/route-semantics: gateway
  creationTimestamp: null
  name: istio-system~gateway-istio-autogenerated-k8s-gateway-default~retry.domain.example
  namespace: default
spec:
  gateways:
  - istio-system/gateway-istio-autogenerated-k8s-gateway-default
  hosts:
  - retry.domain.example
  http:
  - match:
    - uri:
        prefix: /explicit
    name: default.http-retry-request.0
    retries:
      attempts: 3
      backoff: 0.003s
      retryOn: connect-failure,refused-stream,unavailable,cancelled,503,429
    route:
    - destination:
        host: httpbin.default.svc.domain.suffix
        port:
          number: 80
  - match:
    - uri:
        prefix: /disable
    name: default.http-retry-request.2
    retries: {}
    route:
    - destination:
        host: httpbin.default.svc.domain.suffix
        port:
          number: 80
  - match:
    - uri:
        prefix: /empty
    name: default.http-retry-request.1
    retries:
      attempts: 2
      retryOn: connect-failure,refused-stream,unavailable,cancelled
    route:
    - destination:
        host: httpbin.default.svc.domain.suffix
        port:
          number: 80
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  annotations:
    internal.istio.io/parents: HTTPRoute/http2.default
    internal.istio.io/route-semantics: gateway
  creationTimestamp: null
  name: istio-system~gateway-istio-autogenerated-k8s-gateway-default~second.domain.example
  namespace: default
spec:
  gateways:
  - istio-system/gateway-istio-autogenerated-k8s-gateway-default
  hosts:
  - second.domain.example
  http:
  - match:
    - uri:
        prefix: /second
    name: default.http2.0
    route:
    - destination:
        host: httpbin-second.default.svc.domain.suffix
        port:
          number: 80
  - match:
    - uri:
        prefix: /
    name: default.http2.1
    route:
    - destination:
        host: httpbin-wildcard.default.svc.domain.suffix
        port:
          number: 80
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  annotations:
    internal.istio.io/parents: HTTPRoute/http-timeout-backend-request.default
    internal.istio.io/route-semantics: gateway
  creationTimestamp: null
  name: istio-system~gateway-istio-autogenerated-k8s-gateway-default~timeout-backend.domain.example
  namespace: default
spec:
  gateways:
  - istio-system/gateway-istio-autogenerated-k8s-gateway-default
  hosts:
  - timeout-backend.domain.example
  http:
  - match:
    - uri:
        prefix: /get
    name: default.http-timeout-backend-request.0
    route:
    - destination:
        host: httpbin.default.svc.domain.suffix
        port:
          number: 80
    timeout: 0.001s
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  annotations:
    internal.istio.io/parents: HTTPRoute/http-timeout-request.default
    internal.istio.io/route-semantics: gateway
  creationTimestamp: null
  name: istio-system~gateway-istio-autogenerated-k8s-gateway-default~timeout.domain.example
  namespace: default
spec:
  gateways:
  - istio-system/gateway-istio-autogenerated-k8s-gateway-default
  hosts:
  - timeout.domain.example
  http:
  - match:
    - uri:
        prefix: /get
    name: default.http-timeout-request.0
    route:
    - destination:
        host: httpbin.default.svc.domain.suffix
        port:
          number: 80
    timeout: 0.001s
---
